--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Dimy Teknologi Indonesia</title>
 </head>
 
@@ -39,7 +40,7 @@
         <div class="home-title">
             <img src="assets/img/DimyHand.webp" alt="value-logo" class="header-logo">
             <h1>SOLVING COMPLEX CHALLENGES</h1>
-            <h2>WITH CODE</h2>
+            <h2 class="blue-text">WITH CODE</h2>
             
         </div>
 
@@ -52,31 +53,35 @@
         <!---- Value--->
 
         <div class="value-sec">
-            <div>
+            <div class="logo-container">
                 <img src="assets/img/value.png" alt="value-logo" class="value-logo">
             </div>
-            <h3>WE PRIORITIZE <span>OUR CUSTOMER</span></h3>
+
+            <div class="value">
+                <h3>WE PRIORITIZE</h3>
+                <h4 class="blue-text"><span class="border-bottom">OUR CUST</span>OMER</h4>
+            </div>
 
             <div class="value-list">
-                <img src="" alt="" class="value-logo">
+                <i class="fa-thin fa-gears" style="color: #2da0ca;"></i>
                 <h4 class="value-title">INNOVATION AND CREATIVITY</h4>
                 <p class="value-explanation">We drive innovation with creative solutions, ensuring our clients thrive in a rapidly changing tech landscape.</p>
             </div>
     
             <div class="value-list">
-                <img src="" alt="" class="value-logo">
+                <img src="" alt="" class="value-content">
                 <h4 class="value-title">AGILITY AND ADAPTABILITY</h4>
                 <p class="value-explanation">Our agile approach guarantees swift responses to tech trends, keeping our solutions relevant and future-proof.</p>
             </div>
 
             <div class="value-list">
-                <img src="" alt="" class="value-logo">
+                <img src="" alt="" class="value-content">
                 <h4 class="value-title">EXPERTISE AND TECHNICAL EXCELLENCE</h4>
                 <p class="value-explanation">Our team's technical mastery ensures every project reflects a commitment to quality and the latest technologies.</p>
             </div>
 
             <div class="value-list">
-                <img src="" alt="" class="value-logo">
+                <img src="" alt="" class="value-content">
                 <h4 class="value-title">COLLABORATIVE AND TEAM ORIENTED CULUTRE</h4>
                 <p class="value-explanation">We thrive on teamwork, fostering a culture that sparks innovation and ensures exceptional solutions to complex challenges.</p>
             </div>
