--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
 
             <div class="value-list">
-                <i class="fa-thin fa-gears" style="color: #2da0ca;"></i>
+                <i class="fa-thin fa-gears" style="color: #2da0ca; width: 1000px; height: 1000px;"></i>
                 <h4 class="value-title">INNOVATION AND CREATIVITY</h4>
                 <p class="value-explanation">We drive innovation with creative solutions, ensuring our clients thrive in a rapidly changing tech landscape.</p>
             </div>
