update: add styling to vision and mission

--- a/index.html
+++ b/index.html
@@ -63,27 +63,35 @@
             </div>
 
             <div class="value-list">
-                <i class="fa-thin fa-gears" style="color: #2da0ca; width: 1000px; height: 1000px;"></i>
-                <h4 class="value-title">INNOVATION AND CREATIVITY</h4>
-                <p class="value-explanation">We drive innovation with creative solutions, ensuring our clients thrive in a rapidly changing tech landscape.</p>
+                <img src="assets/img/lamp.png" alt="lamp-innovation" class="lamp-innovation">
+                <div>
+                    <h4 class="value-title blue-text">INNOVATION AND CREATIVITY</h4>
+                    <p class="value-explanation">We drive innovation with creative solutions, ensuring our clients thrive in a rapidly changing tech landscape.</p>
+                </div>
             </div>
     
             <div class="value-list">
-                <img src="" alt="" class="value-content">
-                <h4 class="value-title">AGILITY AND ADAPTABILITY</h4>
-                <p class="value-explanation">Our agile approach guarantees swift responses to tech trends, keeping our solutions relevant and future-proof.</p>
+                <img src="assets/img/agility.png" alt="agility" class="agility">
+                <div>
+                    <h4 class="value-title blue-text">AGILITY AND ADAPTABILITY</h4>
+                    <p class="value-explanation">Our agile approach guarantees swift responses to tech trends, keeping our solutions relevant and future-proof.</p>
+                </div>
             </div>
 
             <div class="value-list">
-                <img src="" alt="" class="value-content">
-                <h4 class="value-title">EXPERTISE AND TECHNICAL EXCELLENCE</h4>
-                <p class="value-explanation">Our team's technical mastery ensures every project reflects a commitment to quality and the latest technologies.</p>
+                <img src="assets/img/technical.png" alt="technical" class="technical">
+                <div>
+                    <h4 class="value-title blue-text">EXPERTISE AND TECHNICAL EXCELLENCE</h4>
+                    <p class="value-explanation">Our team's technical mastery ensures every project reflects a commitment to quality and the latest technologies.</p>
+                </div>
             </div>
 
             <div class="value-list">
-                <img src="" alt="" class="value-content">
-                <h4 class="value-title">COLLABORATIVE AND TEAM ORIENTED CULUTRE</h4>
-                <p class="value-explanation">We thrive on teamwork, fostering a culture that sparks innovation and ensures exceptional solutions to complex challenges.</p>
+                <img src="assets/img/collaborative.png" alt="collab" class="collaborative">
+                <div>
+                    <h4 class="value-title blue-text">COLLABORATIVE AND TEAM ORIENTED CULUTRE</h4>
+                    <p class="value-explanation">We thrive on teamwork, fostering a culture that sparks innovation and ensures exceptional solutions to complex challenges.</p>
+                </div>
             </div>
 
         </div>
@@ -93,13 +101,15 @@
         <div class="vision-misson-sec">
 
             <div class="vision-section">
-                <h3 class="vision-title">EMPOWERING A CONNECTED <span>FUTURE</span></h3>
+                <h3 class="vision-title">EMPOWERING A</h3>
+                <h4 class="blue-text"><span class="border-bottom">CONNECT</span>ED FUTURE</h4>
                 <p class="vision-content">Our vision is to be at the forefront of technological innovation, connecting people and businesses through cutting-edge solutions. We aspire to shape a future where technology enhances lives, fosters collaboration, and brings about positive change on a global scale.</p>
             </div>
             <img src="assets/img/vision-image.jpg" alt="vision-image" class="vision-image">
 
             <div class="mission-section">
-                <h3 class="mission-title">DRIVING <span>DIGITAL EXCELENCE</span></h3>
+                <h3 class="mission-title">DRIVING DIGITAL</h3>
+                <h4 class="blue-text"><span class="border-bottom">EXIST</span>ENCE</h4>
                 <p class="mission-content">Our mission is to drive digital excellence by delivering innovative and tailored technology solutions. We are dedicated to providing our clients with the tools they need to thrive in a digital world, fostering a culture of continuous learning and collaboration within our team, and contributing to the advancement of technology for the benefit of society. Through our commitment to quality, creativity, and adaptability, we aim to be a trusted partner on the journey to digital transformation.</p>
             </div>
             <img src="assets/img/mission-image.jpg" alt="mission-image" class="mission-image">
@@ -109,10 +119,11 @@
 
         <div class="service-sec">
 
-            <h3 class="our-service-title">OUR <span>SERVICES</span></h3>
+            <h3 class="our-service-title">OUR <span class="blue-text">SERVICES</span></h3>
 
             <div class="services-title">
-                <h4>CUSTOM SOFTWARE DEVELOPMENT</h4>
+                <h4>CUSTOM SOFTWARE</h4>
+                <h4>DEVELOPMENT</h4>
                 <p>Tailored solutions designed to meet your unique business needs. From concept to implementation, our expert developers craft custom software that enhances efficiency, scalability, and user experience.</p>
             </div>
 
