--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Dimy Teknologi Indonesia</title>
 </head>
 
@@ -318,7 +317,7 @@
                     <label for="femail" class="label-name">E-mail:</label>
                     <input type="text" id="femail" name="femail" placeholder="email" class="input-form">
                     <label for="gender" class="label-name">Gender</label>
-                    <select id="dropdown-gender" class="input-form" name="gender">
+                    <select id="gender" class="input-form" name="gender">
                         <option value="">Select</option>
                         <option value="male">Male</option>
                         <option value="female">Female</option>
